syntax = "proto3";

package m2m_ui;


import "google/api/annotations.proto";
import "profile.proto";
import "ext_account.proto";

service TopUpService {
    rpc GetTopUpHistory(GetTopUpHistoryRequest) returns (GetTopUpHistoryResponse){
        option(google.api.http) = {
			get: "/api/top-up/{user_id}/history"
		};
    }

    rpc GetTopUpDestination(GetTopUpDestinationRequest) returns (GetTopUpDestinationResponse){
        option(google.api.http) = {
			get: "/api/top-up/{user_id}/supernode-account/{money_abbr}"
		};
    }
}

message GetTopUpHistoryRequest {
    int64 user_id = 1;
    int64 offset = 2;
    int64 limit = 3;
}

message TopUpHistory {
    double amount = 1;
    string created_at = 2;
	string tx_hash = 3;
}

message GetTopUpHistoryResponse {
    int64 count = 1;
    repeated TopUpHistory topup_history = 2;
    ProfileResponse user_profile = 3;
}

message GetTopUpDestinationRequest {
    int64 user_id = 1;
    Money money_abbr = 2;
}

message GetTopUpDestinationResponse {
    string active_account = 1;
    ProfileResponse user_profile = 2;
}